Profile container with correctly aligned boxes

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -42,18 +42,17 @@
 /*EXPERIMENT*/
 #profile-container {
     width: 80%;
-    /*background-color: #ffcc33;*/
     margin: 18px auto;
 }
 #first {
-    width: 400px;
+    width: 200px;
     float: left;
-    height: 500px;
+    height: 200px;
     background-color: blue;
 }
 #second {
-    width: 200px;
-    float: left;
+    width: 70%;
+    float: right;
     height: 300px;
     background-color: green;
 }
